cli: fix crash in `nmcli device wifi` with multiple wifi devices (bgo #734466)

And separate details for particular devices with an empty line.

https://bugzilla.gnome.org/show_bug.cgi?id=734466

Reported-by: Martin Pitt <martinpitt@gnome.org>